(library
 (name mccs)
 (foreign_stubs
  (language cxx)
  (names changed_criteria constraint_generation count_criteria
   cudf_reductions cudf_tools glpk_solver lp_solver lexagregate_combiner
   new_criteria notuptodate_criteria removed_criteria mccscudf mccs_stubs)
  (flags
   :standard
   (:include cxxflags.sexp)))
 (public_name mccs)
 (modules :standard \ context_flags)
 (c_library_flags
  :standard
  (:include clibs.sexp))
 (library_flags
  :standard
  (:include flags.sexp))
 (wrapped false)
 (libraries
  cudf
  (select
   config.h
   from
   (mccs.glpk.internal -> config.internal.h)
   (mccs.glpk.shared -> config.external.h)
   (mccs.glpk.static -> config.external.h)
   (_ -> config.empty.h))))

(rule
  (with-stdout-to config.internal.h (echo "#include \"glpk/glpk.h\"")))

(rule
  (with-stdout-to config.external.h (echo "#include <glpk.h>")))

(rule
  (with-stdout-to config.empty.h (echo "")))

(executable
 (name context_flags)
 (modules context_flags)
 (libraries compiler-libs.common))

(rule
 (targets cxxflags.sexp clibs.sexp flags.sexp)
 (deps context_flags.exe (universe))
 (action
  (run %{deps})))
